--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
     "bootstrap": "^5.1.3",
-    "node-sass": "^6.0.1",
+    "clsx": "^1.1.1",
+    "node-sass": "4.14.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0",
     "react-dom": "^17.0.2",
+    "react-error-boundary": "^3.1.3",
     "react-redux": "^7.2.0",
     "react-scripts": "4.0.3",
     "typescript": "~4.1.5"
