--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
+    "axios": "^0.23.0",
     "bootstrap": "^5.1.3",
     "clsx": "^1.1.1",
     "node-sass": "4.14.1",
