--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^2.8.2",
     "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -12,6 +13,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
+    "@types/yup": "^0.29.13",
     "axios": "^0.23.0",
     "bootstrap": "^5.1.3",
     "clsx": "^1.1.1",
@@ -20,11 +22,13 @@
     "react-bootstrap": "^2.0.0",
     "react-dom": "^17.0.2",
     "react-error-boundary": "^3.1.3",
+    "react-hook-form": "^7.17.5",
     "react-hot-toast": "^2.1.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
